Updates to prow-tests image: * disable Dialog warning with apt-get * configure docker to use GCR for auth

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -16,6 +16,9 @@ FROM gcr.io/k8s-testimages/kubekins-e2e:v20180604-68e777553-experimental
 LABEL maintainer "Adriano Cunha <adrcunha@google.com>"
 
 # Install extras on top of base image
+ENV DEBIAN_FRONTEND noninteractive
+
 RUN gcloud components install docker-credential-gcr
+RUN docker-credential-gcr configure-docker
 RUN apt-get install -y uuid-runtime  # for uuidgen
 RUN go get github.com/google/go-containerregistry/cmd/ko
