Initial version of library.sh in prow-tests image

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -22,3 +22,6 @@ RUN gcloud components install docker-credential-gcr
 RUN docker-credential-gcr configure-docker
 RUN apt-get install -y uuid-runtime  # for uuidgen
 RUN go get github.com/google/go-containerregistry/cmd/ko
+
+# Add our scripts
+ADD scripts/library.sh .
