Fix plugin rule in Makefile
Bonus: add update-cluster rule in preparation for the next step.

--- a/prow/Makefile
+++ b/prow/Makefile
@@ -25,7 +25,10 @@ update-config: get-cluster-credentials
 	kubectl create configmap config --from-file=config.yaml=config.yaml --dry-run -o yaml | kubectl replace configmap config -f -
 
 update-plugins: get-cluster-credentials
-	kubectl create configmap plugins --from-file=plugins=plugins.yaml --dry-run -o yaml | kubectl replace configmap plugins -f -
+	kubectl create configmap plugins --from-file=plugins.yaml=plugins.yaml --dry-run -o yaml | kubectl replace configmap plugins -f -
+
+update-cluster: get-cluster-credentials
+	kubectl apply -f cluster.yaml
 
 test:
 	bazel run @k8s//prow/cmd/config -- --plugin-config=$(PROW_DIR)/plugins.yaml
