Initial version of release.sh helper in prow-tests image
This helper manages flag parsing and test skipping, leaving the real script in the repos with only the important stuff (i.e., building the release).

This will reduce boilerplate code and unify the release strategy and features across the repos.

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -25,3 +25,5 @@ RUN go get github.com/google/go-containerregistry/cmd/ko
 
 # Add our scripts
 ADD scripts/library.sh .
+ADD scripts/presubmit-tests.sh .
+ADD scripts/release.sh .
