--- a/ci/prow/cluster.yaml
+++ b/ci/prow/cluster.yaml
@@ -83,6 +83,7 @@ spec:
       labels:
         app: hook
     spec:
+      serviceAccountName: "hook"
       terminationGracePeriodSeconds: 180
       containers:
       - name: hook
@@ -144,6 +145,7 @@ spec:
       labels:
         app: plank
     spec:
+      serviceAccountName: "plank"
       containers:
       - name: plank
         image: gcr.io/k8s-prow/plank:v20180709-7109caeb1
@@ -178,6 +180,7 @@ spec:
       labels:
         app: sinker
     spec:
+      serviceAccountName: "sinker"
       containers:
       - name: sinker
         image: gcr.io/k8s-prow/sinker:v20180709-7109caeb1
@@ -208,6 +211,7 @@ spec:
       labels:
         app: deck
     spec:
+      serviceAccountName: "deck"
       terminationGracePeriodSeconds: 30
       containers:
       - name: deck
@@ -252,6 +256,7 @@ spec:
       labels:
         app: horologium
     spec:
+      serviceAccountName: "horologium"
       terminationGracePeriodSeconds: 30
       containers:
       - name: horologium
@@ -337,6 +342,7 @@ spec:
       labels:
         app: tot
     spec:
+      serviceAccountName: "tot"
       terminationGracePeriodSeconds: 30
       containers:
       - name: tot
@@ -396,6 +402,7 @@ spec:
       labels:
         app: tide
     spec:
+      serviceAccountName: "tide"
       containers:
       - name: tide
         image: gcr.io/k8s-prow/tide:v20180625-90124aa3f
