--- a/ci/prow/config_start.yaml
+++ b/ci/prow/config_start.yaml
@@ -49,13 +49,52 @@ metadata:
 kind: ServiceAccount
 apiVersion: v1
 metadata:
+  name: "boskos"
+  namespace: test-pods
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: "boskos"
+  namespace: test-pods
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: boskos
+subjects:
+- kind: ServiceAccount
+  name: "boskos"
+  namespace: test-pods
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: "boskos"
+  namespace: test-pods
+rules:
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - create
+  - apiGroups:
+      - boskos.k8s.io
+    resources:
+      - resources
+    verbs:
+      - "*"
+---
+kind: ServiceAccount
+apiVersion: v1
+metadata:
   name: "default"
   namespace: test-pods
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: "default"
+  name: "test-pods-default"
   namespace: test-pods
 roleRef:
   apiGroup: rbac.authorization.k8s.io
