--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -91,6 +91,9 @@ test_groups:
 - name: pull-knative-pkg-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-pkg-go-coverage
   short_text_metric: coverage
+- name: ci-knative-serving-api-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-serving-api-coverage
+  short_text_metric: api_coverage
 
 # Dashboards
 
@@ -110,6 +113,10 @@ dashboards:
     test_group_name: ci-knative-serving-latency
     description: '95% latency in ms'
     base_options: 'exclude-filter-by-regex=Overall&group-by-directory=&expand-groups=&sort-by-name='
+  - name: api-coverage
+    test_group_name: 'ci-knative-serving-api-coverage'
+    description: 'Conformance tests API coverage.'
+    base_options: 'exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name='
 - name: knative-build
   dashboard_tab:
   - name: continuous
