--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1365,6 +1365,28 @@ periodics:
       args:
       - "--artifacts-dir=$(ARTIFACTS)"
       - "--service-account=/etc/service-account/service-account.json"
+- cron: "5 8 * * *" # Run at 01:05PST every day (08:05 UTC)
+  name: ci-knative-serving-api-coverage
+  agent: kubernetes
+  labels:
+    preset-service-account: "true"
+  decorate: true
+  ssh_key_secrets:
+  - ssh-knative
+  extra_refs:
+  - org: knative
+    repo: serving
+    base_ref: master
+    clone_uri: "git@github.com:knative/serving.git"
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/apicoverage:latest
+      imagePullPolicy: Always
+      command:
+      - "/apicoverage"
+      args:
+      - "--artifacts-dir=$(ARTIFACTS)"
+      - "--service-account=/etc/service-account/service-account.json"
 - cron: "0 1 * * *" # Run at 01:00 every day
   name: ci-knative-serving-go-coverage
   agent: kubernetes
