--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -16,18 +16,23 @@ FROM gcr.io/k8s-testimages/kubekins-e2e:v20180604-68e777553-experimental
 LABEL maintainer "Adriano Cunha <adrcunha@google.com>"
 
 # Install extras on top of base image
-ENV DEBIAN_FRONTEND noninteractive
 
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update
+
+# Docker
 RUN gcloud components install docker-credential-gcr
 RUN docker-credential-gcr configure-docker
 
-RUN apt-get update
+# Extra tools through apt-get
 RUN apt-get install -y uuid-runtime  # for uuidgen
-RUN apt-get install -y npm  # for markdownk-link-checker
+RUN apt-get install -y npm  # for markdownk-link-check
 
+# Extra tools through go get
 RUN go get -u github.com/google/go-containerregistry/cmd/ko
 RUN go get -u github.com/golang/dep/cmd/dep
 RUN go get -u github.com/mattmoor/dep-collector
 RUN go get -u github.com/google/licenseclassifier
 
+# Extra tools through npm
 RUN npm install -g markdown-link-check
