--- a/images/apicoverage/Makefile
+++ b/images/apicoverage/Makefile
@@ -17,6 +17,6 @@ REGISTRY ?= gcr.io
 PROJECT  ?= knative-tests/test-infra
 PUSH     ?= docker push
 apicoverage-image:
-	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o apicoverage
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build ../../tools/apicoverage
 	docker build -t "$(REGISTRY)/$(PROJECT)/apicoverage:latest" .
 	$(PUSH) "$(REGISTRY)/$(PROJECT)/apicoverage:latest"
