Create a tool to properly list changed files in a PR
This will make the "no testing necessary" checking more reliable.

Fixes #72

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -36,3 +36,6 @@ RUN go get -u github.com/google/licenseclassifier
 
 # Extra tools through npm
 RUN npm install -g markdown-link-check
+
+# Extra custom tools
+ADD githubhelper .
