--- a/ci/gubernator/config.yaml
+++ b/ci/gubernator/config.yaml
@@ -51,7 +51,7 @@ jobs:
   - pull-knative-caching-build-tests
   - pull-knative-caching-unit-tests
   - pull-knative-caching-integration-tests
-  knative-prow/logs:
+  knative-prow/logs/:
   - ci-knative-serving-continuous
   - ci-knative-serving-release
   - ci-knative-serving-playground
