Add infrastructure for publishing named releases
Bonuses:
* move documentation about `release.sh` to `README.md`
* add reference to the documentation in `e2e-tests.sh` and `release.sh`
* turn `run_dep_collector` into a more generic function
* add a few smoke tests for `release.sh`

--- a/ci/prow/boskos/resources.yaml
+++ b/ci/prow/boskos/resources.yaml
@@ -24,5 +24,15 @@ resources:
   - knative-boskos-08
   - knative-boskos-09
   - knative-boskos-10
+  - knative-boskos-11
+  - knative-boskos-12
+  - knative-boskos-13
+  - knative-boskos-14
+  - knative-boskos-15
+  - knative-boskos-16
+  - knative-boskos-17
+  - knative-boskos-18
+  - knative-boskos-19
+  - knative-boskos-20
   state: dirty
   type: gke-project
