Import dep-collector into test-infra
Bonus: `dummy.go` can now be removed.

--- a/images/prow-tests/Makefile
+++ b/images/prow-tests/Makefile
@@ -20,6 +20,7 @@ all: build
 build:
 	make -C ../../tools/githubhelper
 	mv ../../tools/githubhelper/githubhelper .
+	go build ../../tools/dep-collector
 	docker build -t $(IMG):$(TAG) .
 	docker tag $(IMG):$(TAG) $(IMG):latest
 
@@ -29,4 +30,7 @@ push_versioned: build
 push_latest: build
 	docker push $(IMG):latest
 
-push: push_versioned push_latest
+clean:
+	rm -fr githubhelper dep-collector
+
+push: push_versioned push_latest clean
