--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -68,6 +68,9 @@ test_groups:
 - name: ci-knative-serving-api-coverage
   gcs_prefix: knative-prow/logs/ci-knative-serving-api-coverage
   short_text_metric: api_coverage
+- name: ci-knative-serving-performance
+  gcs_prefix: knative-prow/logs/ci-knative-serving-performance-tool
+  short_text_metric: perf_latency
 - name: ci-knative-build-continuous
   gcs_prefix: knative-prow/logs/ci-knative-build-continuous
 - name: ci-knative-build-release
@@ -124,6 +127,10 @@ dashboards:
   - name: api-coverage
     test_group_name: ci-knative-serving-api-coverage
     description: 'Conformance tests API coverage.'
+    base_options: 'exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name='
+  - name: performance
+    test_group_name: ci-knative-serving-performance-tool
+    description: 'Performance tests numbers'
     base_options: 'exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name='
 - name: knative-build
   dashboard_tab:
