Add eventing sources to prow.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -53,6 +53,7 @@ tide:
     - knative/build-templates
     - knative/serving
     - knative/eventing
+    - knative/eventing-sources
     - knative/docs
     - knative/test-infra
     - knative/pkg
